--- a/web-client/package.json
+++ b/web-client/package.json
@@ -11,8 +11,10 @@
     "@types/react": "^18.2.8",
     "@types/react-dom": "^18.2.4",
     "firebase": "^9.22.1",
+    "i18next": "^22.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^12.3.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
