--- a/web-client/tsconfig.json
+++ b/web-client/tsconfig.json
@@ -1,4 +1,5 @@
 {
+
   "compilerOptions": {
     "target": "es5",
     "lib": [
@@ -6,25 +7,26 @@
       "dom.iterable",
       "esnext"
     ],
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
     "allowJs": true,
     "skipLibCheck": true,
-    "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    // "noFallthroughCasesInSwitch": true,
+    // "noUnusedLocals": true,
+    // "noUnusedParameters": true,
     "module": "esnext",
     "moduleResolution": "node",
-    "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
     "baseUrl": "./",
     "strictNullChecks": true,
     "noImplicitAny": true,
-    "noImplicitThis": true
+    "noImplicitThis": true,
+    
   },
   "include": ["src"]
 }
